[gd_scene load_steps=18 format=2]

[ext_resource path="res://Recursos/Items/wing_left.png" type="Texture" id=1]
[ext_resource path="res://VideoJuego/Personaje/Bailarina.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Players/bunny2_walk1.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Players/bunny2_jump.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Players/bunny2_stand.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Players/bunny2_walk2.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Sfx/Jump 1.wav" type="AudioStream" id=7]
[ext_resource path="res://Recursos/Items/wing_right.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Saltar",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 6 ) ],
"loop": true,
"name": "Correr",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 34.1315
height = 75.784

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 36.7249, 10 )

[sub_resource type="CircleShape2D" id=4]
radius = 63.2173

[sub_resource type="Animation" id=5]
resource_name = "EntrarPortal"
tracks/0/type = "value"
tracks/0/path = NodePath("Animacion:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animacion:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Oscurecer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("wing_right:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 20.0, 30.0, 40.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_left:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, -20.0, -30.0, -35.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("wing_left:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("wing_right:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
resource_name = "aclarar"
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("wing_right:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_left:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Bailarina" type="KinematicBody2D" groups=[
"jugador",
]]
z_index = 50
z_as_relative = false
collision_layer = 2
collision_mask = 29
script = ExtResource( 2 )
velocidad = Vector2( 600, 900 )
aceleracionCaida = 280
fuerzaSalto = 2800

[node name="wing_left" type="Sprite" parent="."]
visible = false
position = Vector2( -42.8373, -23.9385 )
texture = ExtResource( 1 )
offset = Vector2( -40.8254, -13.8672 )

[node name="wing_right" type="Sprite" parent="."]
visible = false
position = Vector2( 43.4673, -22.0486 )
texture = ExtResource( 8 )
offset = Vector2( 40.0608, -15.2691 )

[node name="Animacion" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Correr"

[node name="ColisonOrejas" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="AudioSalto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.667

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.6, 1.6 )
limit_left = -2000
limit_bottom = 2000
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_right = 0.1
drag_margin_bottom = 0.1

[node name="ColisionPies" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.529602, 87.9354 )
shape = SubResource( 3 )

[node name="ColisionCuerpo" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.529724, 24.8974 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/EntrarPortal = SubResource( 5 )
anims/Oscurecer = SubResource( 8 )
anims/Volar = SubResource( 6 )
anims/aclarar = SubResource( 9 )
anims/default = SubResource( 7 )

[node name="PowerUpSalto" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="PowerUpVolar" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="PowerUpSalto" to="." method="_on_PowerUpSalto_timeout"]
[connection signal="timeout" from="PowerUpVolar" to="." method="_on_PowerUpVolar_timeout"]
